@@ -123,6 +123,9 @@ effects:
             '1': seeds
             '2': melon_seeds
             '3': pumpkin_seeds
+    Hoe + Knockback:
+        enable: true
+        yPerLevel: 1.0
     Hoe + Power:
         enable: true
     Hoe + Punch:
@@ -208,6 +211,9 @@ effects:
     Shovel + Silk Touch:
         enable: true
         minLevel: 2         # since Silk Touch I already exists in vanilla, we require higher levels by default
+    Sword + Feather Falling:
+        yVelocityPerLevel: 0.5
+        enable: true
     Sword + Fire Protection:
         enable: true
     Sword + Flame:
