@@ -1,6 +1,8 @@
 X   X   
     * Add Sword + Feather Falling = launch victim (right-click)
+    * Add Hoe + Knockback = knock victim into ground (right-click)
     * Add Boots + Feather Falling X = zero fall damage
+    * Fix Sword + Infinity, now damages item on use
 
 2012-03-13  0.8.2
     * Add Sword + Punch = knock out of hand (right-click player)
